removing list.of for more compatablilty with older java compilers