@@ -71,7 +71,7 @@ public class VisualizeData {
      * Maximize aggregate counter pick given two of the opponents heroes
      */
     public static String getBestSecondPickPool(AllHeroStats allHeroStats, String op1, String op2, int numToGet) {
-        SingleHeroStats singleHeroStats = getAggregateCounterPick(allHeroStats, List.of(op1, op2));
+        SingleHeroStats singleHeroStats = getAggregateCounterPick(allHeroStats, Arrays.asList(op1, op2));
         singleHeroStats.getOpponents().remove(op1);
         singleHeroStats.getOpponents().remove(op2);
         List<Map.Entry<String, WinLossTotals>> greatest = findGreatest(singleHeroStats.getOpponents(), numToGet);
@@ -120,7 +120,7 @@ public class VisualizeData {
      * Minimize counter pick whilst still counterpicking
      */
     public static String getBestFinalPickPool(AllHeroStats allHeroStats, String op1, String op2, String op3, String op4, int numToGet) {
-        SingleHeroStats singleHeroStats = getAggregateCounterPick(allHeroStats, List.of(op1, op2, op3, op4));
+        SingleHeroStats singleHeroStats = getAggregateCounterPick(allHeroStats, Arrays.asList(op1, op2, op3, op4));
         singleHeroStats.getOpponents().remove(op1);
         singleHeroStats.getOpponents().remove(op2);
         singleHeroStats.getOpponents().remove(op3);
@@ -149,7 +149,7 @@ public class VisualizeData {
     }
 
     public static double getStatisticalAdvantageTeamScore(AllHeroStats allHeroStats, String hero1, String hero2, String hero3, String hero4, String hero5, String op1, String op2, String op3, String op4, String op5) {
-        SingleHeroStats opponentAggregateWinRates = getAggregateCounterPick(allHeroStats, List.of(op1, op2, op3, op4, op5));
+        SingleHeroStats opponentAggregateWinRates = getAggregateCounterPick(allHeroStats, Arrays.asList(op1, op2, op3, op4, op5));
         WinLossTotals hero1Compare = opponentAggregateWinRates.getOpponents().get(hero1);
         WinLossTotals hero2Compare = opponentAggregateWinRates.getOpponents().get(hero2);
         WinLossTotals hero3Compare = opponentAggregateWinRates.getOpponents().get(hero3);
